feat(ci): add security gates, cross-platform release, and SLSA provenance
Security & Quality Gates (ci.yml):
- cargo-audit for vulnerability scanning via rustsec/audit-check
- cargo-deny for license compliance (deny GPL, AGPL, LGPL, SSPL)
- deny.toml with allowed/denied license lists

Cross-Platform Release (release.yml):
- Builds for Linux (musl), macOS, Windows (5 targets total)
- Both maker-cli and maker-mcp binaries per platform
- SHA256 checksums for all artifacts
- SLSA Level 3 provenance attestations via attest-build-provenance
- Auto-generated release notes from conventional commits via git-cliff

Configuration:
- cliff.toml: git-cliff config for changelog generation
- deny.toml: cargo-deny license and dependency rules

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
+---
 name: CI
 
-on:
+"on":
   push:
     branches: [main]
   pull_request:
@@ -11,6 +12,31 @@ env:
   RUSTFLAGS: -Dwarnings
 
 jobs:
+  # ===========================================================================
+  # Security Scanning
+  # ===========================================================================
+  security-audit:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: rustsec/audit-check@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+  license-check:
+    name: License & Dependency Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v2
+        with:
+          command: check
+          arguments: --all-features
+
+  # ===========================================================================
+  # Quality Gates
+  # ===========================================================================
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -49,9 +75,13 @@ jobs:
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Generate coverage
-        run: cargo llvm-cov --all-features --lcov --output-path lcov.info --ignore-filename-regex '(main\.rs|maker-mcp\.rs)'
-      - name: Check coverage threshold (library code, excluding binaries)
-        run: cargo llvm-cov --all-features --fail-under-lines 90 --ignore-filename-regex '(main\.rs|maker-mcp\.rs)'
+        run: |
+          cargo llvm-cov --all-features --lcov --output-path lcov.info \
+            --ignore-filename-regex '(main\.rs|maker-mcp\.rs)'
+      - name: Check coverage threshold
+        run: |
+          cargo llvm-cov --all-features --fail-under-lines 90 \
+            --ignore-filename-regex '(main\.rs|maker-mcp\.rs)'
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
