--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,8 @@ env:
 
 jobs:
   # ===========================================================================
-  # Security Scanning
+  # Security & License Scanning (cargo-deny handles both)
   # ===========================================================================
-  security-audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: rustsec/audit-check@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
   license-check:
     name: License & Dependency Check
     runs-on: ubuntu-latest
